objects/Lead.object
<CustomObject>
    <fields>
        <fullName>IST_Rep__c</fullName>
        <description>Field that denotes the name of IST rep involved in Account</description>
        <label>IST Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Territory Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Adam Siedlecki</fullName>
                </value>
                <value>
                    <fullName>Alisha Netto</fullName>
                </value>
                <value>
                    <fullName>Amanda Terhaar</fullName>
                </value>
                <value>
                    <fullName>Austin Dorr</fullName>
                </value>
                <value>
                    <fullName>Blake Reckley</fullName>
                </value>
                <value>
                    <fullName>CAM Great Lakes</fullName>
                </value>
                <value>
                    <fullName>CAM Northeast</fullName>
                </value>
                <value>
                    <fullName>Chad Dupray</fullName>
                </value>
                <value>
                    <fullName>Christina Caito</fullName>
                </value>
                <value>
                    <fullName>Cory Bertozzi</fullName>
                </value>
                <value>
                    <fullName>Daniel Erbacher</fullName>
                </value>
                <value>
                    <fullName>David Farley</fullName>
                </value>
                <value>
                    <fullName>Eli Matheny</fullName>
                </value>
                <value>
                    <fullName>Elisa Galante</fullName>
                </value>
                <value>
                    <fullName>Emily Germaine</fullName>
                </value>
                <value>
                    <fullName>Glenn Wood</fullName>
                </value>
                <value>
                    <fullName>Jake Bass</fullName>
                </value>
                <value>
                    <fullName>Jake Murray</fullName>
                </value>
                <value>
                    <fullName>Jared McHenry</fullName>
                </value>
                <value>
                    <fullName>Jason Bartz</fullName>
                </value>
                <value>
                    <fullName>Joe Kostek</fullName>
                </value>
                <value>
                    <fullName>Joe Naylor</fullName>
                </value>
                <value>
                    <fullName>John Luraschi</fullName>
                </value>
                <value>
                    <fullName>Josh Bové</fullName>
                </value>
                <value>
                    <fullName>Julia Davis</fullName>
                </value>
                <value>
                    <fullName>Kaley Doyle</fullName>
                </value>
                <value>
                    <fullName>Karen Dusky</fullName>
                </value>
                <value>
                    <fullName>Kevin Ruggerio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PMP</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Other/See Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_In_Selling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested In Selling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Buying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested In Buying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Meeting__c</fullName>
        <label>Interested in Meeting at Conference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Turn_Time__c</fullName>
        <description>used by capital on web to lead forms (Form assembly)</description>
        <label>Inventory Turn Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <defaultValue>&apos;English&apos;</defaultValue>
        <description>Used on Web to Lead Form</description>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastDateTouched__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Date Touched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadHeadline__c</fullName>
        <label>Lead Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Assist_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Assist Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_DeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead DeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Mapping__c</fullName>
        <description>used by Capital integration</description>
        <label>Lead Record Type Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV Capital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Record_type_Conversion__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Lead Record type (Conversion)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration__c</fullName>
        <inlineHelpText>Date License # expires</inlineHelpText>
        <label>License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Power_of_Attorney_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the Account signed the Limited Power of Attorney</inlineHelpText>
        <label>Limited Power of Attorney Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_in_Profile__c</fullName>
        <label>Linked in Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MC_Number__c</fullName>
        <label>MC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maps_Sales_Region_Name__c</fullName>
        <formula>maps__AssignmentRule__r.maps__ShapeLayer__r.Name</formula>
        <label>Maps Sales Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maps_Sales_Territory_Name__c</fullName>
        <formula>Maps_TM_Assignment_Rule__r.maps__ShapeLayer__r.Name</formula>
        <label>Maps Sales Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maps_TM_Assignment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for relating Salesforce Maps Assignment Plans for the TMs and Sales Territories</description>
        <label>Maps TM Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Leads (Maps TM Assignment Rule)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Place_Report_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to grant access to market place. This will be populated by create lead endpoint. Upon conversion, the &quot;Role&quot; field on the Contact record will be set to &quot;Read Only&quot;</description>
        <label>Market Place Report User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NG_Dealer__c</fullName>
        <description>Dealer number with Next Gear</description>
        <label>NG Dealer #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Next Gear customer</description>
        <label>NG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Netsuite_Email__c</fullName>
        <description>Email to send Transporter Invoices/Bills from Netsuite</description>
        <label>Netsuite Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>No_DOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be marked true whenever there is not a DOT number</description>
        <label>No DOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectionstoRegistering__c</fullName>
        <label>Objections to Registering</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Company_Name__c</fullName>
        <description>Active dealership name as seen on building or signage</description>
        <inlineHelpText>Active dealership name as seen on building or signage</inlineHelpText>
        <label>Other Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Calendly_Link__c</fullName>
        <description>Owner&apos;s Calendly Link</description>
        <formula>IF(
LEFT(OwnerId, 3) = &apos;005&apos;,
HYPERLINK(Owner:User.Calendly_Link__c, Owner:User.Calendly_Link__c),
&apos;&apos; 
)</formula>
        <label>Owner Calendly Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <description>The full name of the owner</description>
        <formula>IF(
LEFT(OwnerId, 3) = &apos;005&apos;,
Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName,
Owner:Queue.QueueName
)</formula>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone_Number__c</fullName>
        <description>Owner&apos;s phone number</description>
        <formula>IF(
LEFT(OwnerId, 3) = &apos;005&apos;,
Owner:User.Phone,
&apos;&apos;
)</formula>
        <label>Owner Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Monthly_Buy_Volume__c</fullName>
        <inlineHelpText>The Number of Vehicles that the dealer could purchase</inlineHelpText>
        <label>Potential Monthly Buy Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Monthly_Sell_Volume__c</fullName>
        <inlineHelpText>Enter the total number of cars the Franchise Dealer sends to Wholesale per month (regardless of where they send them).</inlineHelpText>
        <label>Potential Wholesale Monthly Sell Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REFERENCE__c</fullName>
        <label>REFERENCE</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regional Sales Director populated by Salesforce Maps assignment rules</description>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_Interest__c</fullName>
        <label>Reason for No Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Behavior Concerns</fullName>
                </value>
                <value>
                    <fullName>Duplicate Lead</fullName>
                </value>
                <value>
                    <fullName>Happy With Current Solution</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product Features</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact</fullName>
                </value>
                <value>
                    <fullName>Unhappy with ACV</fullName>
                </value>
                <value>
                    <fullName>Wants to Touch/Feel Car</fullName>
                </value>
                <value>
                    <fullName>Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other / See Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <description>Requested by Jake Renner on 5/4/2020</description>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tradeshow/Event</fullName>
                </value>
                <value>
                    <fullName>Dealer Association</fullName>
                </value>
                <value>
                    <fullName>Print Ad</fullName>
                </value>
                <value>
                    <fullName>Search engines (Google, Bing, etc.)</fullName>
                </value>
                <value>
                    <fullName>Social Media Post/Ad (LinkedIn, Facebook)</fullName>
                </value>
                <value>
                    <fullName>Media Coverage</fullName>
                </value>
                <value>
                    <fullName>Mailer</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Referred by Someone</fullName>
                </value>
                <value>
                    <fullName>Sales Associate (TM, VCI, Blitz, etc.)</fullName>
                </value>
                <value>
                    <fullName>Phone call from ACV representative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Agent_First_Name__c</fullName>
        <label>Registered Agent First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Agent_Last_Name__c</fullName>
        <label>Registered Agent Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_Business_Name__c</fullName>
        <label>Registered Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Has Not Registered</fullName>
                </value>
                <value>
                    <fullName>Waiting on Paperwork</fullName>
                </value>
                <value>
                    <fullName>Fully Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_Email_Timer__c</fullName>
        <description>contains the date/time when an email needs to be sent if the lead hasn&apos;t been assigned to one of the team yet</description>
        <label>Reminder Email Timer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True indicates the Contact has agreed to receive marketing-based SMS text messages from ACV.</description>
        <inlineHelpText>True indicates the Contact has agreed to receive marketing-based SMS text messages from ACV.</inlineHelpText>
        <label>SMS Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Per_Month__c</fullName>
        <label>Sales Per Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small (1-24)</fullName>
                </value>
                <value>
                    <fullName>Medium (25-50)</fullName>
                </value>
                <value>
                    <fullName>Large (50+)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Demo_Completed__c</fullName>
        <label>Short Demo Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sole_Proprietorship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sole Proprietorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                    <default>true</default>
                    <label>Cold</label>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Untouched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Akron, OH</fullName>
                </value>
                <value>
                    <fullName>Albany</fullName>
                    <label>Albany-Schenectady-Troy, NY</label>
                </value>
                <value>
                    <fullName>Albuquerque, NM</fullName>
                </value>
                <value>
                    <fullName>Arizona - North</fullName>
                </value>
                <value>
                    <fullName>Arizona - South</fullName>
                </value>
                <value>
                    <fullName>Athens, GA</fullName>
                </value>
                <value>
                    <fullName>Atlanta South, GA</fullName>
                </value>
                <value>
                    <fullName>Austin, TX</fullName>
                </value>
                <value>
                    <fullName>Austin - North</fullName>
                </value>
                <value>
                    <fullName>Baltimore, MD</fullName>
                </value>
                <value>
                    <fullName>Baltimore North</fullName>
                </value>
                <value>
                    <fullName>Baton Rouge, LA</fullName>
                </value>
                <value>
                    <fullName>Biloxi</fullName>
                </value>
                <value>
                    <fullName>BSW</fullName>
                    <label>Binghamton/SW</label>
                </value>
                <value>
                    <fullName>Birmingham, AL</fullName>
                </value>
                <value>
                    <fullName>Boca Raton, FL</fullName>
                </value>
                <value>
                    <fullName>Boise, ID</fullName>
                </value>
                <value>
                    <fullName>Boston - North, MA</fullName>
                </value>
                <value>
                    <fullName>Boston South, MA</fullName>
                </value>
                <value>
                    <fullName>Boston - West, MA</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                    <label>Buffalo, NY</label>
                </value>
                <value>
                    <fullName>Cedar Rapids, IA</fullName>
                </value>
                <value>
                    <fullName>Central Illinois</fullName>
                </value>
                <value>
                    <fullName>Central Missouri</fullName>
                </value>
                <value>
                    <fullName>Central PA</fullName>
                </value>
                <value>
                    <fullName>Charleston, SC</fullName>
                </value>
                <value>
                    <fullName>Charlotte, NC</fullName>
                </value>
                <value>
                    <fullName>Charlotte South, NC</fullName>
                </value>
                <value>
                    <fullName>Chicago - North, IL</fullName>
                </value>
                <value>
                    <fullName>Chicago - South, IL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle Specialization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Under 5k</fullName>
                </value>
                <value>
                    <fullName>Under 10k</fullName>
                </value>
                <value>
                    <fullName>Under 20k</fullName>
                </value>
                <value>
                    <fullName>Over 20k</fullName>
                </value>
                <value>
                    <fullName>Other/ See notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified_Latitude__c</fullName>
        <description>Salesforce Maps field used to correct the location of an lead</description>
        <label>Verified Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_Longitude__c</fullName>
        <description>Salesforce Maps field used to correct the location of an lead</description>
        <label>Verified Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_value_of_cars_would_you_like_to_buy__c</fullName>
        <label>What value of cars would you like to buy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Where_Do_you_Buy_Online__c</fullName>
        <label>Where Do you Buy Online</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where_do_you_Acquire_Inventory__c</fullName>
        <label>Where do you Acquire Inventory?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PhysicalAuction</fullName>
                    <label>Physical Auction</label>
                </value>
                <value>
                    <fullName>Wholesalers</fullName>
                </value>
                <value>
                    <fullName>Other_Online_Auction</fullName>
                    <label>Other Online Auction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Don_t_You_buy_online__c</fullName>
        <label>Why Don&apos;t You buy online</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Invitation_Create_Date__c</fullName>
        <description>Alyce Most Recent Gift Invitation Create Date</description>
        <inlineHelpText>Alyce Most Recent Gift Invitation Create Date</inlineHelpText>
        <label>Most Recent Gift Invitation Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Invitation_Gift_Name__c</fullName>
        <description>Alyce Most Recent Gift Invitation Gift Name</description>
        <inlineHelpText>Alyce Most Recent Gift Invitation Gift Name</inlineHelpText>
        <label>Most Recent Gift Invitation Gift Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Invitation_Sent_Date__c</fullName>
        <description>Alyce Most Recent Gift Invitation Sent Date</description>
        <inlineHelpText>Alyce Most Recent Gift Invitation Sent Date</inlineHelpText>
        <label>Most Recent Gift Invitation Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Invitation_Status__c</fullName>
        <description>Alyce Most Recent Gift Invitation Status</description>
        <inlineHelpText>Alyce Most Recent Gift Invitation Status</inlineHelpText>
        <label>Most Recent Gift Invitation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Most_Recent_Gift_Landing_Page__c</fullName>
        <description>Alyce Most Recent Gift Invitation Recipient Landing Page</description>
        <inlineHelpText>Alyce Most Recent Gift Invitation Recipient Landing Page</inlineHelpText>
        <label>Most Recent Gift Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>dealership_yesno__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you associated to a dealership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>min_dist_to_indy_miles__c</fullName>
        <inlineHelpText>The Minimum Distance in Miles from the Dealership to a Physical Independent Auction</inlineHelpText>
        <label>Min Dist to Indy Auction Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>min_dist_to_major_miles__c</fullName>
        <inlineHelpText>The Minimum Distance in Miles from the Dealership to a Major Physical Auction</inlineHelpText>
        <label>Min Dist to Major Auction Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_indy_within_100_miles__c</fullName>
        <description>The Number of Independent Auctions within 100 Miles of the Dealer</description>
        <inlineHelpText>The Number of Independent Auctions within 100 Miles of the Dealer</inlineHelpText>
        <label>Num Indy Auction Within 100 Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_major_within_100_miles__c</fullName>
        <inlineHelpText>The Number of Major Auctions within 100 Miles of the Dealer</inlineHelpText>
        <label>Num Major Auctions Within 100 Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_Locations__c</fullName>
        <label># of Locations</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <description>Campaign Name from a UTM tagged URL</description>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <description>Content (to differentiate ads) from a UTM tagged URL</description>
        <label>utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <description>Marketing Medium from a UTM tagged URL</description>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <description>Referral source from a UTM tagged URL</description>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>